[project]
name = "encrypted-blob-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=45.0.7",
    "flask>=3.1.2",
    "mitmproxy>=12.1.2",
]

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"


[project.scripts]
encrypted-blob-server = "encrypted_blob_server.app:main"

[dependency-groups]
dev = [
    "encrypted-blob-server",
]

[tool.uv.sources]
encrypted-blob-server = { workspace = true }
