[project]
name = "encrypted-blob-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argon2-cffi>=25.1.0",
    "cryptography>=45.0.7",
    "flask>=3.1.2",
    "mitmproxy>=12.1.2",
    "requests>=2.32.5",
]

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"


[project.scripts]
encrypted-blob-server = "encrypted_blob_server.app:main"
encrypted-blob-upload = "encrypted_blob_server.upload:main"
encrypted-blob-migrate = "encrypted_blob_server.migrate:main"
encrypted-blob-docker-entrypoint = "encrypted_blob_server.docker_entrypoint:main"

[dependency-groups]
dev = [
    "encrypted-blob-server",
]

[tool.uv.sources]
encrypted-blob-server = { workspace = true }
